--- a/contacts/templates/base.html
+++ b/contacts/templates/base.html
@@ -28,7 +28,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Contacts-Organiser {% block extra_meta %}{% endblock %}</title>
+    <title>Contacts-Organiser {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
