--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,70 @@
 {% extends "base.html" %}
 {% load static %}
 
+
+{% block page-header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-<h1 class="display-4 text-success">It all works!!</h1>
+    <!-- title section -->
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-4 my-auto"></div>
+            <div class="col-4 my-auto ml-5">
+                <h1 class="display-4 logo-font mt-4 text-black">
+                    Contacts
+                </h1>
+            </div>
+            <div class="col-4 my-auto"></div></div>
+        </div>
+    </div>
+    <!-- space section -->
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col" style="height:100px"></div>
+        </div>
+    </div>
+    <!-- cards section -->
+    <div class="container h-100"></div>
+        <div class="row h-100">
+            <div class="col-4 my-auto">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 my-auto">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-4 my-auto">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
