Create add contact funtionality

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,6 +27,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col" style="height:100px"></div>
+            <a href="/add">Add a contact</a>
         </div>
     </div>
     <!-- cards section -->
