Wire up atadbase to html templateates

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,42 +30,29 @@
             <a href="/add">Add a contact</a>
         </div>
     </div>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col">
+                <h2>my contacts</h2>
+            </div>
+        </div>
+    </div>
     <!-- cards section -->
     <div class="container h-100"></div>
         <div class="row h-100">
-            <div class="col-4 my-auto">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
+            {% for item in items %}
+                <div class="col-4 my-auto">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                        <h5 class="card-title">Name: {{ item.first_name }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Surname: {{ item.last_name }}</h6>
+                        <p class="card-text">Address: {{ item.address }}</p>
+                        <a href="#" class="card-link">Phone: {{ item.phone }}</a>
+                        <a href="#" class="card-link">Email: {{ item.email }}</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-4 my-auto">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-4 my-auto">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
-                    </div>
-                  </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
