--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -15,6 +15,14 @@
 
     {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <style>
+      form{
+        margin-left: 300px;
+      }
+      #id_first_name{
+        background-color: brown;
+      }
+    </style>
     {% endblock %}
 
     {% block extra_css %}
