--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,11 @@
     <!-- title section -->
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-4 my-auto"></div>
+            <div class="col-4 my-auto">
+                <div class="logo">
+                    <img src="/media/contacts-organiser-logo.png" alt="logo">
+                </div>
+            </div>
             <div class="col-4 my-auto ml-5">
                 <h1 class="display-4 logo-font mt-4 text-black">
                     Contacts
@@ -42,13 +46,13 @@
         <div class="row h-100">
             {% for item in items %}
                 <div class="col-4 my-auto">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card ml-3 my-2" style="width: 22rem;">
                         <div class="card-body">
                         <h5 class="card-title">Name: {{ item.first_name }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Surname: {{ item.last_name }}</h6>
                         <p class="card-text">Address: {{ item.address }}</p>
-                        <a href="#" class="card-link">Phone: {{ item.phone }}</a>
-                        <a href="#" class="card-link">Email: {{ item.email }}</a>
+                        <p class="card-text">Phone: {{ item.phone }}</p>
+                        <a href="#" class="card-link btn btn-primary">Email: {{ item.email }}</a>
                         </div>
                     </div>
                 </div>
