--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,9 +15,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-4 my-auto">
-                <div class="logo">
-                    <img src="/media/contacts-organiser-logo.png" alt="logo">
-                </div>
+                <div class="logo"></div>
             </div>
             <div class="col-4 my-auto ml-5">
                 <h1 class="display-4 logo-font mt-4 text-black">
