Create delete funtionality

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -51,6 +51,7 @@
                         <p class="card-text">Address: {{ item.address }}</p>
                         <p class="card-text">Phone: {{ item.phone }}</p>
                         <a href="#" class="card-link btn btn-primary">Email: {{ item.email }}</a>
+                        <a href="/delete/{{ item.id }}" class="btn btn-danger my-2">Delete Contact</a>
                         </div>
                     </div>
                 </div>
