--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,6 @@
-body{
-    background-color: black;
-}
 .logo{
     /* background-image: url("/media/contacts-organiser-logo.png"); */
     background-color: blue;
+    height:200px;
+    width:200px;
 }
