--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -52,6 +52,7 @@
                         <p class="card-text">Phone: {{ item.phone }}</p>
                         <a href="#" class="card-link btn btn-primary">Email: {{ item.email }}</a>
                         <a href="/delete/{{ item.id }}" class="btn btn-danger my-2">Delete Contact</a>
+                        <a href="/edit/{{ item.id }}" class="btn btn-warning my-2">Edit Contact</a>
                         </div>
                     </div>
                 </div>
