--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -16,7 +16,7 @@
     {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/base.css">
     <style>
       form{
         margin-left: 300px;
@@ -42,7 +42,7 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <h1 class="mt-3"><a href="/"><i class="fa-solid fa-circle-arrow-left"></i></a></h1>
+        <h1 class="mt-3"><a href="{% url 'home' %}"><i class="fa-solid fa-circle-arrow-left"></i></a></h1>
         {% if messages %}
         <div class="message-container"></div>
         {% endif %}
