--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -41,7 +41,7 @@
     <title>Contacts-Organiser {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top">
+    <header class="container-fluid">
         <h1 class="mt-3"><a href="{% url 'home' %}"><i class="fa-solid fa-circle-arrow-left"></i></a></h1>
         {% if messages %}
         <div class="message-container"></div>
